# backend/src/modules/sgsi-scope/dto/activate-module.dto.ts
@@ -1,0 +1,8 @@
+import { IsEnum } from 'class-validator';
+
+import { ModuleKey } from '../../../common/enums/module-key.enum';
+
+export class ActivateModuleDto {
+  @IsEnum(ModuleKey)
+  moduleKey!: ModuleKey;
+}
